--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
     <!-- fine header -->
 
     <!-- inizio jumbotron -->
-    <div class="jumbotron"></div>
+    <div class="jumbotron">
+        <div>
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <ul>
+                <li id="jumbobutton1"><a href="#">Scarica per Mac</a></li>
+                <li id="jumbobutton2"><a href="#">Apri discord nel tuo browser</a></li>
+            </ul>
+        </div>
+    </div>
     <!-- fine jumbotron -->
     
 </body>
