--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- inizio header con nav -->
     <header id="menu">
-        <nav>
+        <nav class="nav-top">
             
             <ul>
                 <img class="imglogo" src="img/logo.svg" alt="logo discord">
@@ -87,6 +87,7 @@
                 </div>
             </div>
         </section>
+
         <!-- pagina 4 -->
         <section>
 
@@ -99,7 +100,66 @@
     <!-- fine main -->
 
     <!-- inizio footer -->
-    <footer></footer>
+    <footer>
+
+        <div class="foot-section">
+
+            <div class="foot-first">
+                <h3>Il tuo posto per parlare</h3>
+                <select name="Lingua" id="Lingua"></select>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <nav class="nav-foot">
+                <ul>
+                    <li>Prodotto</li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord?</a></li>
+                    <li><a href="#">Ispirazione</a></li>
+                    <li><a href="#">Università</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Stato</a></li>
+                </ul>
+                <ul>
+                    <li>Compagnia</li>
+                    <li><a href="#">Chi Siamo</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="#">Marchio</a></li>
+                    <li><a href="#">Redazione</a></li>
+                    <li><a href="#">Negozio</a></li>
+                </ul>
+                <ul>
+                    <li>Risorse</li>
+                    <li><a href="#">Assistenza</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Suggerimenti</a></li>
+                    <li><a href="#">Partner</a></li>
+                    <li><a href="#">Verifica</a></li>
+                    <li><a href="#">Sviluppatori</a></li>
+                    <li><a href="#">StreamKit</a></li>
+                    <li><a href="#">Open Source</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Moderazione</a></li>
+                </ul>
+                <ul>
+                    <li>Norme</li>
+                    <li><a href="#">Termini</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Linee Guida</a></li>
+                    <li><a href="#">Riconoscimenti</a></li>
+                    <li><a href="#">Licenze</a></li>
+                </ul>
+            </nav>
+
+    </div>
+        <hr>
+    </footer>
     <!-- fine footer -->
     
 </body>
