--- a/index.html
+++ b/index.html
@@ -102,22 +102,24 @@
     <!-- inizio footer -->
     <footer>
 
-        <div class="foot-section">
+        <div class="footer-alto">
 
-            <div class="foot-first">
-                <h3>Il tuo posto per parlare</h3>
-                <select name="Lingua" id="Lingua"></select>
+            <div class="foot-interno">
+
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li> 
+                        <h3>Il tuo posto per parlare</h3>
+                    </li>
+                    <!-- <li>
+                        <select name="Lingua" id="Lingua"></select>
+                    </li> -->
                     <li></li>
                     <li></li>
                 </ul>
-            </div>
-
-            <nav class="nav-foot">
                 <ul>
-                    <li>Prodotto</li>
+                    <li>
+                        <span>Prodotto</span>
+                    </li>
                     <li><a href="#">Scarica</a></li>
                     <li><a href="#">Perché Discord?</a></li>
                     <li><a href="#">Ispirazione</a></li>
@@ -126,7 +128,9 @@
                     <li><a href="#">Stato</a></li>
                 </ul>
                 <ul>
-                    <li>Compagnia</li>
+                    <li>
+                        <span>Compagnia</span>
+                    </li>
                     <li><a href="#">Chi Siamo</a></li>
                     <li><a href="#">Lavora con noi</a></li>
                     <li><a href="#">Marchio</a></li>
@@ -134,7 +138,9 @@
                     <li><a href="#">Negozio</a></li>
                 </ul>
                 <ul>
-                    <li>Risorse</li>
+                    <li>
+                        <span>Risorse</span>
+                    </li>
                     <li><a href="#">Assistenza</a></li>
                     <li><a href="#">Sicurezza</a></li>
                     <li><a href="#">Blog</a></li>
@@ -148,17 +154,24 @@
                     <li><a href="#">Moderazione</a></li>
                 </ul>
                 <ul>
-                    <li>Norme</li>
+                    <li>
+                        <span>Norme</span>
+                    </li>
                     <li><a href="#">Termini</a></li>
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Linee Guida</a></li>
                     <li><a href="#">Riconoscimenti</a></li>
                     <li><a href="#">Licenze</a></li>
                 </ul>
-            </nav>
+            </div>
 
     </div>
-        <hr>
+
+        <div class="footer-basso">
+            <hr>
+            <img class="imglogo" src="img/logo.svg" alt="logo discord">
+        </div>
+       
     </footer>
     <!-- fine footer -->
     
